--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,38 @@
         s.parentNode.insertBefore(wf, s);
       })();
       </script>
+      <script type="text/javascript">
+      // include loadCSS here...
+      function loadCSS( href, before, media ){
+        var ss = window.document.createElement( "link" );
+        var ref = before || window.document.getElementsByTagName( "script" )[ 0 ];
+        var sheets = window.document.styleSheets;
+        ss.rel = "stylesheet";
+        ss.href = href;
+        ss.media = "only x";
+        ref.parentNode.insertBefore( ss, ref );
+        ss.onloadcssdefined = function( cb ){
+          var defined;
+          for( var i = 0; i < sheets.length; i++ ){
+            if( sheets[ i ].href && sheets[ i ].href.indexOf( href ) > -1 ){
+              defined = true;
+            }
+          }
+          if( defined ){
+            cb();
+          } else {
+            setTimeout(function() {
+              ss.onloadcssdefined( cb );
+            });
+          }
+        };
+        ss.onloadcssdefined(function() {
+          ss.media = media || "all";
+        });
+        return ss;
+      }
+      loadCSS( "https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" );
+    </script>
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/client.css">
